[B]Version 2.0.3[/B]

- Version bump for frodo
- Fixed duration time issue
- Fixed 'argument 1 must be unicode or str' error
- Fixed 404 error on videos that aren't available
- Fixed issue with new videos not appearing on the first page
- Added retry function to help with connection errors
- Added setting for default view in Confluence skin

[B]Version 1.0.2[/B]

- Fixed duration issue in Frodo by using addStreamInfo()
- Fixed 'ascii' codec can't decode error
- Fixed 'exceptions.TypeError' error when searching for videos
- Fixed 'Failed to import _strptime' error
- Fixed issue with retries on HTTP 404 errors

[B]Version 1.0.1[/B]

- Updated addon for 2012-2013 NBA season
- Replaced get_params with getParameters
- Switched from DVDPLAYER to setResolvedUrl/IsPlayable method for video playback
- Added watched and resume capabilities
- Added function to retry on timeout and connection errors
- Added Buggalo Error Reporting
- Added default view for Confluence skin

[B]Version 1.0.0[/B]

- Initial commit