@@ -7,6 +7,7 @@
     <string id="30004">No videos found. Please check your spelling</string>
     <string id="30005">or try again using different search words.</string>
 	<string id="30006">This video is currently not available.</string>
+	<string id="30007">Video Quality (Resolution_Bitrate): </string>
 	<string id="30050">There was a connection error:</string>
 	<string id="30051">If this problem persists, please submit the error report.</string>
 	<string id="30052">Retry</string>
