@@ -1,3 +1,5 @@
+- Added Video Quality selection via addon settings
+
 [B]Version 2.0.3[/B]
 
 - Version bump for frodo
